# oxycrypt

./: .codex  .gitignore  CODEX_CONTINUATION.md  Cargo.toml  rustfmt.toml
.cargo/: config.toml
crates/block-device/: Cargo.toml
crates/block-device/src/: lib.rs
crates/device-mem/: Cargo.toml
crates/device-mem/src/: lib.rs
crates/device-mem/tests/: memory_device.rs
crates/nbd/: Cargo.toml
crates/nbd/src/: device.rs  kernel_device.rs  lib.rs  proto.rs  server.rs  session.rs
crates/nbd/tests/: mount.rs
oxycrypt/: Cargo.toml
oxycrypt/src/: main.rs
