[package]
name = "nbd"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
packed_struct = "0.10.1"
rustix = { workspace = true }
tracing = { workspace = true }
thiserror = "2.0.18"
enumflags2 = "0.7.12"
rootcause = "0.12.1"
