[package]
name = "nbd"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
block-device = { path = "../block-device" }
rustix = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = "2.0.18"
enumflags2 = "0.7.12"
rootcause = "0.12.1"

[dev-dependencies]
device-mem = { path = "../device-mem" }
